--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "@acryps/page-default-directives",
     "version": "1.0.0",
-    "main": "dist/index.js",
+    "main": "built/index.js",
     "scripts": {
         "version": "tsc"
     },
     "peerDependencies": {
-        "@acryps/page": "^1.0.0"
+        "@acryps/page": "^1.0.2"
     },
     "devDependencies": {
         "typescript": "^4.6.4"
