--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "module": "CommonJS",
-        "target": "es6",
-        "outDir": "dist",
+        "target": "esnext",
+        "outDir": "built",
         "declaration": true,
         "lib": [
 			"esnext",
